# SCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bytecode.md  debug.hpp  dlang  main.cpp  test.s  util.cpp  util.hpp
.github/workflows/: c-cpp.yml
builtin_libs/json/: cyclic_refs_exception.hpp  main.cpp  parse.hpp  pretty.hpp  stringify.hpp
builtin_libs/time/: delay.hpp  main.cpp  timepoint.hpp  timepoint.spec.txt
builtin_libs/xml/: parse.hpp  spec.txt
compile/: bytecode.cpp  bytecode.hpp  command.cpp  command.hpp  compile.cpp  compile.hpp  semantics.cpp  semantics.hpp  tree_to_source.cpp  tree_to_source.hpp
compile/semantics/: process_tree.cpp  process_tree.hpp  semantics.cpp  semantics.hpp  syntax.cpp  syntax.hpp
docs/: bytecode.md
examples/: async_demo.s  character.scl  conway.s  delay.cpp  fib.s  json.scl  loop.s  methods.scl  obj.scl
lib/tsl/: ordered_hash.h  ordered_map.hpp  ordered_set.hpp
parse/: lex.cpp  lex.hpp  parse.cpp  parse.hpp  shell.cpp
vm/: async.hpp  bc.cpp  bc.hpp  closure.cpp  closure.hpp  error.cpp  error.hpp  exec_bc_instr.cpp  exec_bc_instr.hpp  frame.cpp  frame.hpp  gc.hpp  global_ids.cpp  global_ids.hpp  handle.hpp  lambda_return.cpp  lambda_return.hpp  literal.cpp  literal.hpp  object.cpp  object.hpp  operator.cpp  operator.hpp  operators.cpp  operators.hpp  primitive_methods.cpp  primitive_methods.hpp  read_bc.cpp  read_bc.hpp  reference.cpp  reference.hpp  rt_macro.cpp  rt_macro.hpp  value.cpp  value.hpp  value_types.hpp  vm.cpp  vm.hpp
vm/bc/: bc.hpp  exec_bc_instr.cpp  exec_bc_instr.hpp  fault_table.cpp  fault_table.hpp  read_bc.cpp  read_bc.hpp
vm/builtin_operators/: math.cpp  math.hpp  operators.cpp  operators.hpp  refs.cpp  refs.hpp
vm/gc/: gc.cpp  gc.hpp  gc_2.cpp  gc_2.hpp  handle.cpp  handle.hpp  sync_for_gc.cpp  sync_for_gc.hpp
vm/operators/: cmp.cpp  cmp.hpp  internal_tools.cpp  internal_tools.hpp  logic.cpp  logic.hpp  math.cpp  math.hpp  operators.cpp  operators.hpp  refs.cpp  refs.hpp
